New paginas All, Footer,

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>React App</title>
   </head>
-  <body>
+  <body class="login_signup landing_page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
